Fixing margin bottom for the cards at the end of the list on smaller screens

--- a/src/components/ServiceCardList/serviceCardList.module.scss
+++ b/src/components/ServiceCardList/serviceCardList.module.scss
@@ -4,8 +4,16 @@
   row-gap: 2.375rem;
   column-gap: 2.25rem;
 
+  > :last-child {
+    margin-bottom: 4rem;
+  }
+
   @media (min-width: 1025px) {
     row-gap: 3.8125rem;
     padding: 0 1rem;
+
+    > :last-child {
+      margin-bottom: 0rem;
+    }
   }
 }
